# datumhub-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/datum/: console.py  main.py  models.py  state.py  utils.py
src/datum/commands/: add.py  cache.py  check.py  config.py  info.py  init.py  list.py  login.py  publish.py  pull.py  register.py  search.py  unpublish.py  update.py  whoami.py
src/datum/registry/: __init__.py  local.py  remote.py
tests/: test_add.py  test_cache.py  test_check.py  test_config.py  test_info.py  test_list.py  test_login.py  test_models.py  test_publish.py  test_pull.py  test_register.py  test_registry.py  test_remote_registry.py  test_search.py  test_unpublish.py  test_update.py  test_utils.py  test_whoami.py
