[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datumhub-cli"
version = "0.1.0"
description = "Open datasets, open source — a CLI for publishing and consuming open datasets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Datum Contributors" }]
keywords = ["data", "datasets", "registry", "open-data", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[project.scripts]
datum = "datum.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.version]
path = "src/datum/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/datum"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
lint = "ruff check src tests"
typecheck = "mypy src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
